--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Just a draft blog to start with! 😊
+description: I am newbe in Github, Python & Machine learning. I am following online lessons on FastAi about Deep Learning and I have decided to start writing what I have and will be learning during my Machine Learning journey
 github_username: VittoD87
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "Blog-with-Fastpages"
